--- a/ui/src/app/files/files.component.scss
+++ b/ui/src/app/files/files.component.scss
@@ -17,8 +17,7 @@
  */
 
 .add-options {
-  background-color:#f6f6f6;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid var(--color-bg-2);
   padding-top:10px;
   padding-bottom:10px;
 }
