--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -22,10 +22,10 @@
             <div fxFlex="100" fxLayout="column">
                 <div class="p-10 header-margin" fxLayoutAlign="center center">
                     <div class="welcome-text">Welcome to Apache
-                        <span class="welcome-green">S</span>
-                        <span class="welcome-blue">tream</span>
-                        <span class="welcome-green">P</span>
-                        <span class="welcome-blue">ipes</span>!
+                        <span class="welcome-primary">S</span>
+                        <span class="welcome-accent">tream</span>
+                        <span class="welcome-primary">P</span>
+                        <span class="welcome-accent">ipes</span>!
                     </div>
                 </div>
                 <div fxLayout="column" fxFlex="100" class="home-margin">
