--- a/ui/src/app/login/components/setup/setup.component.html
+++ b/ui/src/app/login/components/setup/setup.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div class="full-background setup-container" fxLayout="row" fxLayoutAlign="center center">
+<div class="full-background setup-container light-mode" fxLayout="row" fxLayoutAlign="center center">
     <div fxFlex="80" fxLayout="column" fxLayoutAlign="center center">
         <div fxFlex="100" fxLayout="column" class="box-shadow-login setup-card">
             <form #setupForm="ngForm" fxFlex="100" fxLayout="column">
