--- a/ui/src/app/add/add.component.scss
+++ b/ui/src/app/add/add.component.scss
@@ -32,8 +32,7 @@
 
 .add-options {
   padding:0px;
-  background-color:#f6f6f6;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid var(--color-bg-2);
 }
 
 .add-options-item {
