--- a/ui/src/app/core/components/streampipes/streampipes.component.html
+++ b/ui/src/app/core/components/streampipes/streampipes.component.html
@@ -16,16 +16,7 @@
   ~
   -->
 
-<!--<div flex ng-controller="ToolbarController as toolbarCtrl" class="display: flex;min-height: 100vh; max-height: 100vh;">-->
-<!--    <div ui-view="spNavbar"></div>-->
-<!--    <div style="display: flex;flex-direction: row; height: calc(100vh - 50px);">-->
-<!--        <div md-whiteframe="6" style="width:40px;color:white;" class="sp-darkblue"-->
-<!--             ui-view="spIconBar"></div>-->
-<!--            <md-content class="sp-fade-only-enter" id="content" ui-view="spMain"-->
-<!--                        style="background:#fff !important;flex-grow: 1;"></md-content>-->
-<!--    </div>-->
-<!--</div>-->
-<div>
+<div [ngClass]="authStatusService.darkMode ? 'dark-mode base-style' : 'light-mode base-style'">
     <div style="height: 50px;">
         <toolbar></toolbar>
     </div>
@@ -33,7 +24,7 @@
         <div style="width:40px;color:white;" class="iconbar">
             <iconbar></iconbar>
         </div>
-        <div style="width: 100%; height: 100%; overflow-y: auto;">
+        <div style="width: 100%; height: 100%; overflow-y: auto;" class="base">
             <router-outlet></router-outlet>
         </div>
     </div>
