--- a/ui/src/app/core/components/streampipes/streampipes.component.scss
+++ b/ui/src/app/core/components/streampipes/streampipes.component.scss
@@ -21,3 +21,8 @@
 .iconbar {
   background: $sp-color-primary;
 }
+
+.base {
+  color: var(--color-default-text);
+  background: var(--color-bg-0);
+}
