--- a/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.scss
+++ b/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.scss
@@ -59,8 +59,8 @@
     z-index: 0;
     margin: -1px;
 
-    background-color: white;
-    background-image: linear-gradient(90deg, rgba(208, 208, 208, .5) 10%, transparent 0%), linear-gradient(rgba(208, 208, 208, .5) 10%, transparent 0%);
+    background-color: var(--color-bg-0);
+    background-image: var(--canvas-color);
     background-size: 15px 15px;
 }
 
@@ -82,7 +82,7 @@
     width: 40px;
     height: 80px;
     z-index: 10;
-    background: white;
+    background: var(--color-bg-1);
     box-shadow: 0.175em 0.175em 0 0 rgba(15, 28, 63, 0.125);
     border-radius: 10px;
 
@@ -94,7 +94,7 @@
     bottom: 10px;
     width: 80px;
     height: 80px;
-    background: white;
+    background: var(--color-bg-1);
     box-shadow: 0.175em 0.175em 0 0 rgba(15, 28, 63, 0.125);
     border-radius: 50%;
     z-index: 10;
@@ -103,7 +103,7 @@
 .pan-zoom-button {
     position: absolute;
     cursor: pointer;
-    color: $sp-color-accent;
+    color: var(--color-accent);
 }
 
 .pan-zoom-control-buttons {
