--- a/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
+++ b/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
@@ -19,14 +19,9 @@
 @import '../../../../scss/_variables.scss';
 
 .menu-text-color {
-    color: $sp-color-accent;
+    color: var(--color-accent);
     display: flex;
     align-items: center;
-}
-
-::ng-deep.mat-tooltip.tooltip {
-    background-color: darkblue;
-    font-size: 12px;
 }
 
 .icon-stand {
@@ -34,9 +29,10 @@
     padding-bottom: 1%;
     overflow-y: auto;
     border-top: 0px;
+    background: var(--color-bg-1);
 }
 
 .border {
-    border: 1px solid #cccccc;
+    border: 1px solid var(--color-bg-2);
     border-top: 0;
 }
