--- a/ui/src/app/files/files.component.html
+++ b/ui/src/app/files/files.component.html
@@ -17,8 +17,8 @@
   -->
 
 <div fxLayout="column" class="page-container">
-    <div fxLayout="row" style="padding:0px;background-color:#f6f6f6;">
-        <div fxFlex="100" style="line-height:24px;border-bottom:1px solid #ccc">
+    <div fxLayout="row" style="padding:0;" class="sp-tab-bg">
+        <div fxFlex="100" class="page-container-nav">
             <div fxFlex="100" fxLayout="row">
                 <div fxFlex fxLayoutAlign="start center">
                     <mat-tab-group>
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div fxLayout="row" class="fixed-height add-options">
+    <div fxLayout="row" class="fixed-height add-options sp-tab-bg">
         <div class="add-options-item" fxLayoutAlign="start center" fxLayout="row" style="padding-left:5px;">
             <div fxFlex="100" fxLayout="row">
                 <button mat-button mat-raised-button color="primary"
