--- a/ui/src/app/pipelines/pipelines.component.html
+++ b/ui/src/app/pipelines/pipelines.component.html
@@ -17,12 +17,12 @@
   -->
 
 <div fxLayout="column" class="page-container">
-    <div fxLayout="row" class="border" style="padding:0px;background-color:#f6f6f6;">
-        <div fxFlex="100" style="line-height:24px;border-bottom:1px solid #ccc">
+    <div fxLayout="row" class="border sp-tab-bg" style="padding:0px;">
+        <div fxFlex="100" class="page-container-nav">
             <div fxFlex="100" fxLayout="row">
                 <button mat-button mat-flat-button color="primary" (click)="showPipelineCategoriesDialog()">Manage Categories</button>
                 <div fxFlex fxLayoutAlign="start center" [attr.id]="'peType'">
-                    <mat-tab-group [selectedIndex]="selectedCategoryIndex" (selectedIndexChange)="setSelectedTab($event)">
+                    <mat-tab-group [selectedIndex]="selectedCategoryIndex" (selectedIndexChange)="setSelectedTab($event)" color="accent">
                         <mat-tab label="All pipelines"></mat-tab>
                         <mat-tab *ngFor="let category of pipelineCategories" label="{{category.categoryName}}"></mat-tab>
                     </mat-tab-group>
