--- a/ui/src/scss/sp/layout.scss
+++ b/ui/src/scss/sp/layout.scss
@@ -77,7 +77,7 @@
 
 .page-container-nav {
   line-height:24px;
-  border-bottom:1px solid #ccc;
+  border-bottom:1px solid var(--color-bg-2);
 }
 
 .text-center {
@@ -86,4 +86,37 @@
 
 .text-left {
   text-align: left;
+}
+
+
+h4, .h4 {
+  font-size: 18px;
+}
+
+h3, .h3 {
+  font-size: 24px;
+}
+
+h1, .h1, h2, .h2, h3, .h3 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+h4, .h4, h5, .h5, h6, .h6 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+}
+
+img {
+  vertical-align: middle;
+}
+img {
+  border: 0;
 }
