[STREAMPIPES-275] Deactivate yet unsupported options of pipeline element template builder

--- a/ui/src/app/editor/components/pipeline-element-template-config/pipeline-element-template-config.component.html
+++ b/ui/src/app/editor/components/pipeline-element-template-config/pipeline-element-template-config.component.html
@@ -43,14 +43,14 @@
                                       (change)="handleSelection(config)" name="store" class="sp" color="primary">Store
                             as template
                         </mat-checkbox>
-                        <mat-checkbox *ngIf="templateConfigs.has(config.internalName)"
-                                      (click)="toggleViewPermission(config)" name="displayed"
-                                      class="sp" color="primary">Users can view
-                        </mat-checkbox>
-                        <mat-checkbox *ngIf="templateConfigs.has(config.internalName)"
-                                      (click)="toggleEditPermission(config)" name="editable"
-                                      class="sp" color="primary">Users can modify
-                        </mat-checkbox>
+<!--                        <mat-checkbox *ngIf="templateConfigs.has(config.internalName)"-->
+<!--                                      (click)="toggleViewPermission(config)" name="displayed"-->
+<!--                                      class="sp" color="primary">Users can view-->
+<!--                        </mat-checkbox>-->
+<!--                        <mat-checkbox *ngIf="templateConfigs.has(config.internalName)"-->
+<!--                                      (click)="toggleEditPermission(config)" name="editable"-->
+<!--                                      class="sp" color="primary">Users can modify-->
+<!--                        </mat-checkbox>-->
                     </div>
                 </div>
             </div>
